--- a/features/admob-setup.mdx
+++ b/features/admob-setup.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Setup AdMob Advertising'
+title: 'AdMob'
 description: 'How to set up Google AdMob mobile ads in your app'
+icon: 'dollar-sign'
 ---
 
 # AdMob Integration
