--- a/features/auth/social-auth.mdx
+++ b/features/auth/social-auth.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Social Authentication Setup"
+title: "Supabase Overview"
 description: "Configure social authentication providers in your Supabase project"
 ---
 
