--- a/features/in-app-purchases/overview.mdx
+++ b/features/in-app-purchases/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Monetize Your App"
+title: "Overview"
 description: "An overview of implementing in-app purchases and subscriptions in your app"
 ---
 
@@ -44,9 +44,8 @@ In-app purchases involve several components working together:
 - [iOS Sandbox Testing](./ios-sandbox) - Test in-app purchases on iOS
 
 ### 4. Integration
-- [RevenueCat Setup](./revenuecat) - Configure your RevenueCat account
-- [Import Products to RevenueCat](./import-products-rc) - Import your products from app stores
-- [Superwall Setup](./superwall) - Configure paywalls and A/B testing
+- [RevenueCat Setup](./revenuecat) - Configure your products and purchases
+- [Superwall Setup](./superwall) - Configure paywalls
 
 ## Enable Billing in Your Project
 
