--- a/features/in-app-purchases/superwall.mdx
+++ b/features/in-app-purchases/superwall.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Superwall Paywalls"
+title: "Superwall"
 description: "Set up Superwall for paywall management and A/B testing with RevenueCat integration"
+icon: "layout-template"
 ---
 
 ## Prerequisites
