--- a/features/posthog-setup.mdx
+++ b/features/posthog-setup.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Track User Analytics"
+title: "PostHog"
 description: "Add powerful analytics to your app with PostHog integration"
+icon: "chart-line"
 ---
 
 This boilerplate comes with built-in support for PostHog analytics, helping you understand how users interact with your app. Let's set it up!
