--- a/features/ui-styling-guide.mdx
+++ b/features/ui-styling-guide.mdx
@@ -1,9 +1,7 @@
 ---
-title: 'Make it Stunning'
+title: 'Styling System'
 description: 'Build beautiful interfaces with React Native Reusables and your pre-configured design system'
 ---
-
-# UI & Styling Guide
 
 This guide introduces you to **NativeWind** (styling) and **React Native Reusables** (components) that power your app's UI system.
 
