--- a/index.mdx
+++ b/index.mdx
@@ -1,128 +1,87 @@
 ---
-title: BuildWithAI Boilerplate
-description: "A comprehensive mobile app starter kit for React Native & Expo"
+title: Introduction
+description: "Production-ready React Native & Expo starter kit"
+icon: "book-open"
 ---
+<Card 
+  title="Get the Boilerplate" 
+  icon="rocket"
+  href="https://bwa-website.vercel.app/buildwithai-plus" 
+  cta="Buy Now"
+  arrow="true"
+>
+  Ship your app in days, not months.
+</Card>
 
-## Production-Ready React Native Starter Kit
+## Ship Your Mobile App Fast
 
-BuildWithAI is your complete solution for building professional mobile apps. Follow this step-by-step process to get from zero to app store with our battle-tested stack.
-
-## 1. Setup Your Project (Required)
-
-<CardGroup cols={3}>
-  <Card
-    title="Project Setup"
-    icon="rocket"
-    href="/quickstart/project-setup"
-  >
-    Set up your development environment and create your first app
-  </Card>
-  <Card
-    title="App Configuration"
-    icon="wrench"
-    href="/quickstart/app-configuration"
-  >
-    Configure your app settings and environment variables
-  </Card>
-  <Card
-    title="EAS Setup"
-    icon="cloud"
-    href="/quickstart/eas-setup"
-  >
-    Set up Expo Application Services for building and deployment
-  </Card>
-</CardGroup>
-
-## 2. Test on Your Phone (Required)
-
-<CardGroup cols={3}>
-  <Card
-    title="Development Build"
-    icon="mobile"
-    href="/quickstart/development-build"
-  >
-    Create development builds for testing on real devices
-  </Card>
-  <Card
-    title="Supabase Setup"
-    icon="database"
-    href="/quickstart/supabase-setup"
-  >
-    Set up your backend database and authentication
-  </Card>
-  <Card
-    title="Install Development Build"
-    icon="download"
-    href="/quickstart/install-development-build"
-  >
-    Install and test your development build on your device
-  </Card>
-</CardGroup>
-
-## 3. Work with Your App (Required)
-
-<CardGroup cols={3}>
-  <Card
-    title="UI Styling Guide"
-    icon="paintbrush"
-    href="/features/ui-styling-guide"
-  >
-    Learn how to style components with NativeWind - already configured
-  </Card>
-  <Card
-    title="Theme Customization"
-    icon="palette"
-    href="/features/theme-customization"
-  >
-    Customize colors, fonts, and overall app theme - already configured
-  </Card>
-  <Card
-    title="Text & Languages"
-    icon="globe"
-    href="/features/i18n"
-  >
-    Change app text, add new languages, and manage translations - already configured
-  </Card>
-</CardGroup>
-
-## 4. Add Features (Optional)
+Skip months of setup and configuration with our complete React Native solution. Go from idea to app store in days, not months.
 
 <CardGroup cols={2}>
-  <Card
-    title="Push Notifications"
-    icon="bell"
-    href="/features/push-setup"
-  >
-    Engage users with targeted push notifications
+  <Card title="Quick Start" icon="rocket" href="/quickstart/project-setup">
+    Get your app running in minutes, not weeks
   </Card>
-  <Card
-    title="Social Authentication"
-    icon="user-check"
-    href="/features/auth/google-auth"
-  >
-    Sign in with Google and Apple for seamless user onboarding
+  
+  <Card title="Pre-built Features" icon="boxes" href="/features/ui-styling-guide">
+    Production-ready components and screens
   </Card>
-  <Card
-    title="Analytics"
-    icon="chart-line"
-    href="/features/posthog-setup"
-  >
-    Track user behavior and app performance with PostHog
+</CardGroup>
+
+## Why Choose This Boilerplate?
+
+<CardGroup cols={3}>
+  <Card title="Production Quality" icon="check">
+    Secure and reliable in real apps
   </Card>
+  
+  <Card title="Beginner Friendly" icon="thumbs-up">
+    Clear docs and examples
+  </Card>
+  
+  <Card title="Time Saving" icon="clock">
+    Skip weeks of configuration
+  </Card>
+</CardGroup>
+
+
+## Key Features
+
+<CardGroup cols={2}>
   <Card
     title="In-App Purchases"
     icon="credit-card"
     href="/features/in-app-purchases/overview"
   >
-    Monetize your app with RevenueCat and App Store purchases
+    <b>Premium:</b> Complete subscription system with RevenueCat for Apple and Google app stores.
   </Card>
+  
   <Card
-    title="Advertising"
-    icon="megaphone"
-    href="/features/admob-setup"
+    title="Supabase Backend"
+    icon="database"
+    href="/quickstart/supabase-setup"
   >
-    Generate revenue with Google AdMob integration
+    Ready-to-use backend with email/password auth, social login, database, and storage.
+  </Card>
+  
+  <Card
+    title="Push Notifications"
+    icon="bell"
+    href="/features/push-setup"
+  >
+    Full notification system with audience targeting and scheduling.
+  </Card>
+  
+  <Card
+    title="Analytics & Ads"
+    icon="chart-line"
+    href="/features/posthog-setup"
+  >
+    Built-in PostHog analytics and Google AdMob monetization.
   </Card>
 </CardGroup>
+
+## Next Steps
+
+[Start with our Quick Start Guide →](/quickstart/project-setup)
 
 
