fixed prereq guide links

--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -9,20 +9,20 @@ description: "Get your BuildWithAI boilerplate up and running in minutes"
 
 ## Prerequisites
 
-Before you begin, make sure you have the following tools and accounts ready:
+Before you begin, follow our guides to set up the following tools and accounts (if you haven't already):
 
 <CardGroup cols={2}>
   <Card title="Required Software" icon="wrench">
     <ul className="mt-2">
-      <li>[Node.js](https://nodejs.org/en/download) (v16 or later)</li>
-      <li>[Git](https://git-scm.com/downloads)</li>
-      <li>[Windsurf IDE](https://windsurf.com/download/editor)</li>
+      <li>[Node.js](/quickstart/setup-nodejs)</li>
+      <li>[Git](/quickstart/setup-git)</li>
+      <li>[Windsurf IDE](/quickstart/setup-windsurf)</li>
     </ul>
   </Card>
   
   <Card title="Required Account" icon="user">
     <ul className="mt-2">
-      <li>[Expo Account](https://expo.dev/signup) - Free signup</li>
+      <li>[Expo Account](/quickstart/setup-expo-account) - Free signup</li>
     </ul>
   </Card>
 </CardGroup>
