--- a/features/auth/apple-auth.mdx
+++ b/features/auth/apple-auth.mdx
@@ -1,7 +1,14 @@
 ---
 title: "Apple Sign-In"
 description: "Setup Apple Sign-In for your BuildWithAI app"
+icon: "apple"
 ---
+
+<Warning>
+  **App Store Requirement**: Apple requires that if you implement any third-party authentication options (like Google, Facebook, or Twitter) in your iOS app, you **must** also implement Apple Sign-In to pass the App Store review process. This is a mandatory requirement from Apple, not optional.
+  
+  See [Apple's Sign-In Guidelines](https://developer.apple.com/app-store/review/guidelines/#sign-in-with-apple) for more details.
+</Warning>
 
 ## Prerequisites
 
