--- a/features/auth/google-auth.mdx
+++ b/features/auth/google-auth.mdx
@@ -1,7 +1,12 @@
 ---
 title: "Google Sign-In"
 description: "Set up Google Sign-In authentication for your mobile app"
+icon: "google"
 ---
+
+<Warning>
+  **App Store Requirement**: If you're implementing Google Sign-In (or any third-party authentication system) in your iOS app, Apple requires that you must also implement Apple Sign-In to pass the App Store review process. See [Apple's guidelines](https://developer.apple.com/app-store/review/guidelines/#sign-in-with-apple) for more details, and follow our [Apple Sign-In guide](/features/auth/apple-auth) to implement this required feature.
+</Warning>
 
 ## Step 1: Set Up a Google Cloud Project
 
