--- a/quickstart/setup-cursor.mdx
+++ b/quickstart/setup-cursor.mdx
@@ -81,6 +81,7 @@ Learn these shortcuts to boost your productivity with Cursor:
 - `Ctrl+Enter` - Search codebase in chat
 
 ### Navigation & Interface
+- `Ctrl+P` / `Cmd+P` - Open file picker (quickly search for a file to open)
 - `Ctrl+Shift+P` / `Cmd+Shift+P` - Open command palette
 - `Ctrl+.` / `Cmd+.` - Open mode menu
 - `Ctrl+I` / `Cmd+I` - Toggle sidepanel
@@ -106,14 +107,6 @@ Use @-symbols in chat to provide precise context to Cursor's AI:
 - Combine multiple @-symbols for better context
 
 <Info>Example: "@Files app/(tabs)/index.tsx @Recent Changes" gives Cursor context about your main screen and recent edits</Info>
-
-## Restart Onboarding
-
-If you need to reconfigure your setup:
-
-1. Press `Ctrl+Shift+P` (Windows/Linux) or `Cmd+Shift+P` (macOS)
-2. Search for "Cursor: Start Onboarding"
-3. Follow the setup process again
 
 ## Next Steps
 
