fix small for cursor/windsurf

--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -28,8 +28,6 @@ Before you begin, follow our guides to set up the following tools and accounts (
   </Card>
 </CardGroup>
 
-<Info>We recommend **Cursor IDE** for its powerful AI assistance and VS Code compatibility. Choose **Windsurf** if you prefer a different AI coding experience.</Info>
-
 ## Setup Process
 
 <Steps>
@@ -37,7 +35,7 @@ Before you begin, follow our guides to set up the following tools and accounts (
     <Tabs>
       <Tab title="Cursor IDE (Recommended)">
         1. Open **Cursor IDE**
-        2. Click **Clone Repo** (or press `Ctrl+Shift+P` and search "Git: Clone")
+        2. Click **Clone Repo**
         3. Paste this GitHub repository URL:
            ```
            https://github.com/steffensunbranch/buildwithai-boilerplate.git
@@ -49,7 +47,7 @@ Before you begin, follow our guides to set up the following tools and accounts (
       </Tab>
       <Tab title="Windsurf IDE">
         1. Open **Windsurf IDE**
-        2. Click **Clone Repo** or use Command Palette (`Ctrl+Shift+P`)
+        2. Click **Clone Repo**
         3. Paste this GitHub repository URL:
            ```
            https://github.com/steffensunbranch/buildwithai-boilerplate.git
